--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -24,11 +24,9 @@
 <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js" crossorigin="anonymous"></script>
 <!-- and it's easy to individually load additional languages -->
 
-
-
-
 <script>hljs.highlightAll();</script>
 
+<script src="/assets/js/dselect.js"></script>
 <script src="/assets/js/site.js"></script>
 
 </body>
