--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -35,6 +35,11 @@
 @keyframes l11{
   to {background-position: -200% 0,-100% 100%}
 }
+
+.collapse.font-zero::not(.show) * {
+	font-size: 0 !important;
+	transition: all 0.3s ease;
+}
 </style>
 </head>
 <body>
