--- a/src/scss/yohns.scss
+++ b/src/scss/yohns.scss
@@ -2,15 +2,15 @@
 
 // need to ensure the fonts were copied correctly via the package.json settings
 $bootstrap-icons-font-dir: "./../fonts";
-@import '~bootstrap-icons/font/bootstrap-icons.scss';
+@import './../../node_modules/bootstrap-icons/font/bootstrap-icons.scss';
 
-@import "~bootstrap/scss/mixins/banner";
+@import './../../node_modules/bootstrap/scss/mixins/banner';
 @include bsBanner("");
 
 
 // scss-docs-start import-stack
 // Configuration
-@import "~bootstrap/scss/functions";
+@import './../../node_modules/bootstrap/scss/functions';
 
 
 $zindex-modal-backdrop:             1040;
@@ -85,7 +85,7 @@ $position-values: (
   75: 75%,
   100: 100%
 );
-@import "~bootstrap/scss/variables";
+@import './../../node_modules/bootstrap/scss/variables';
 //?$form-check-input-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-checked-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/></svg>");
 //?$form-check-radio-checked-bg-image:       url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='2' fill='#{$form-check-input-checked-color}'/></svg>");
 //?$form-check-input-indeterminate-bg-image: url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$form-check-input-indeterminate-color}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/></svg>");
@@ -102,15 +102,15 @@ $position-values: (
 //?$carousel-control-prev-icon-bg:     			url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$carousel-control-color}'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
 //?$carousel-control-next-icon-bg:     			url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$carousel-control-color}'><path d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
 //?$btn-close-bg:               							url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$btn-close-color}'><path d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/></svg>");
-@import "~bootstrap/scss/variables-dark";
+@import './../../node_modules/bootstrap/scss/variables-dark';
 //?$form-select-indicator-dark:			        url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$form-select-indicator-color-dark}' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/></svg>");
 //?$form-switch-bg-image-dark: 			        url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$form-switch-color-dark}'/></svg>");
 //?$accordion-button-icon-dark:         			url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-color-dark}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 //?$accordion-button-active-icon-dark:  			url("data:image/svg+xml,<svg xmlns='https://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color-dark}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 
-@import "~bootstrap/scss/maps";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/utilities";
+@import './../../node_modules/bootstrap/scss/maps';
+@import './../../node_modules/bootstrap/scss/mixins';
+@import './../../node_modules/bootstrap/scss/utilities';
 
 $utilities: map-merge(
   $utilities,
@@ -211,51 +211,51 @@ $utilities: map-merge(
 
 
 // Layout & components
-@import "~bootstrap/scss/root";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/images";
-@import "~bootstrap/scss/containers";
-@import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/tables";
-@import "~bootstrap/scss/forms";
-@import "~bootstrap/scss/buttons";
-@import "~bootstrap/scss/transitions";
-@import "~bootstrap/scss/dropdown";
-@import "~bootstrap/scss/button-group";
-@import "~bootstrap/scss/nav";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/card";
-@import "~bootstrap/scss/accordion";
-@import "~bootstrap/scss/breadcrumb";
-@import "~bootstrap/scss/pagination";
-@import "~bootstrap/scss/badge";
-@import "~bootstrap/scss/alert";
-@import "~bootstrap/scss/progress";
-@import "~bootstrap/scss/list-group";
-@import "~bootstrap/scss/close";
-@import "~bootstrap/scss/toasts";
-@import "~bootstrap/scss/modal";
-@import "~bootstrap/scss/tooltip";
-@import "~bootstrap/scss/popover";
-@import "~bootstrap/scss/carousel";
-@import "~bootstrap/scss/spinners";
-@import "~bootstrap/scss/offcanvas";
-@import "~bootstrap/scss/placeholders";
+@import './../../node_modules/bootstrap/scss/root';
+@import './../../node_modules/bootstrap/scss/reboot';
+@import './../../node_modules/bootstrap/scss/type';
+@import './../../node_modules/bootstrap/scss/images';
+@import './../../node_modules/bootstrap/scss/containers';
+@import './../../node_modules/bootstrap/scss/grid';
+@import './../../node_modules/bootstrap/scss/tables';
+@import './../../node_modules/bootstrap/scss/forms';
+@import './../../node_modules/bootstrap/scss/buttons';
+@import './../../node_modules/bootstrap/scss/transitions';
+@import './../../node_modules/bootstrap/scss/dropdown';
+@import './../../node_modules/bootstrap/scss/button-group';
+@import './../../node_modules/bootstrap/scss/nav';
+@import './../../node_modules/bootstrap/scss/navbar';
+@import './../../node_modules/bootstrap/scss/card';
+@import './../../node_modules/bootstrap/scss/accordion';
+@import './../../node_modules/bootstrap/scss/breadcrumb';
+@import './../../node_modules/bootstrap/scss/pagination';
+@import './../../node_modules/bootstrap/scss/badge';
+@import './../../node_modules/bootstrap/scss/alert';
+@import './../../node_modules/bootstrap/scss/progress';
+@import './../../node_modules/bootstrap/scss/list-group';
+@import './../../node_modules/bootstrap/scss/close';
+@import './../../node_modules/bootstrap/scss/toasts';
+@import './../../node_modules/bootstrap/scss/modal';
+@import './../../node_modules/bootstrap/scss/tooltip';
+@import './../../node_modules/bootstrap/scss/popover';
+@import './../../node_modules/bootstrap/scss/carousel';
+@import './../../node_modules/bootstrap/scss/spinners';
+@import './../../node_modules/bootstrap/scss/offcanvas';
+@import './../../node_modules/bootstrap/scss/placeholders';
 
 // Helpers
-@import "~bootstrap/scss/helpers";
+@import './../../node_modules/bootstrap/scss/helpers';
 
 // Utilities
-@import "~bootstrap/scss/utilities/api";
+@import './../../node_modules/bootstrap/scss/utilities/api';
 // scss-docs-end import-stack
 
-@import '~@tkrotoff/bootstrap-floating-label/src/bootstrap-floating-label';
-@import './dselect.scss';
+@import './../../node_modules/@tkrotoff/bootstrap-floating-label/src/bootstrap-floating-label';
+@import './plugins/_dselect-edited';
 
-//@import '../vendors/bootstrap5-tags/tags';
-//@import '~use-bootstrap-select/scss/use-bootstrap-select.scss';
-//@import '../vendors/vanillajs-datepicker/sass/datepicker-bs5.scss';
+//@import './../vendors/bootstrap5-tags/tags';
+//@import './../../use-bootstrap-select/scss/use-bootstrap-select.scss';
+//@import './../vendors/vanillajs-datepicker/sass/datepicker-bs5.scss';
 
 
 //! / copied from node_modules\@davicotico\menu-editor
