--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,7 +18,6 @@
 	</div>
 </div>
 
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js" crossorigin="anonymous"></script>
@@ -26,8 +25,7 @@
 
 <script>hljs.highlightAll();</script>
 
-<script src="/assets/js/dselect.js"></script>
-<script src="/assets/js/site.js"></script>
+<script src="/assets/js/app.js"></script>
 
 </body>
 </html>
