--- a/views/partials/settings.ejs
+++ b/views/partials/settings.ejs
@@ -20,19 +20,18 @@
 			</ul>
 		</h5>
 		<div class="card-body">
-			<div class="tab-content overflow-auto" id="settings-tab-content">
+			<div class="tab-content overflow-auto h-100" id="settings-tab-content">
 				<div class="tab-pane fade active show" id="main-tab-pane" role="tabpanel" aria-labelledby="main-tab" tabindex="0">
 					<div class="input-group mb-3">
 						<span class="input-group-text" id="type-model">AI Model:</span>
-						<select class="form-select" id="model-preset-select">
-							<option value="default">..Loading..</option>
+						<select class="form-select" data-dselect-search="true" id="model-preset-select">
+							<option value="">Model:.</option>
 						</select>
 					</div>
-					<span class="help-text">AI model is the different</span>
 					<div class="input-group mb-3">
-						<span class="input-group-text" id="prompt-preset">Prompt Presets</span>
-						<select class="form-select" id="prompt-preset-select">
-							<option value="default">..Loading..</option>
+						<span class="input-group-text" id="prompt-preset">Prompts</span>
+						<select class="form-select" data-dselect-search="true" id="prompt-preset-select">
+							<option value="">Prompt:.</option>
 						</select>
 					</div>
 					<div class="floating-label">
