--- a/views/partials/settings.ejs
+++ b/views/partials/settings.ejs
@@ -32,6 +32,7 @@
 						<span class="input-group-text" id="prompt-preset">Prompts</span>
 						<select class="form-select" data-dselect-search="true" id="prompt-preset-select">
 							<option value="">Prompt:.</option>
+							<option value="Advanced Coding Guru">Advanced Coding Guru</option>
 						</select>
 					</div>
 					<div class="floating-label">
