Nice. Still a lot to do, but were getting there

--- a/src/scss/yohns.scss
+++ b/src/scss/yohns.scss
@@ -19,7 +19,7 @@ $zindex-offcanvas:                  1055;
 
 $offcanvas-horizontal-width:        500px;
 
-$primary: #6e9ee4; // compile
+$primary: #82ab00; // compile
 $enable-shadows: true;
 $enable-rfs: false;
 $enable-deprecation-messages: false;
