--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 		<footer class="d-flex flex-wrap justify-content-between align-items-center">
 			<div class="col-md-4 d-flex align-items-center">
 				<a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-					<img style="height:32px; width:atuo;" alt="AI Robot on Computer" src="/assets/svg/ai-6e9dd4.svg">
+					<img style="height:32px; width:atuo;" alt="AI Robot on Computer" src="/assets/svg/ai-82ab00.svg">
 				</a>
 				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 JW3B by Yohn</span>
 	 		</div>
