--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -1,6 +1,9 @@
 
 <div class="col-9 mb-3" data-yo-col="9" id="main-chat">
 	<div class="card bg-dark-subtle chat-container">
+		<div class="card-header">
+			<span id="chat-name">Chat Name</span> <button type="button" class="btn btn-primary" id="edit-name-btn"><i class="bi bi-pencil"></i></button>
+		</div>
 		<div class="card-body d-flex flex-column">
 			<div class="chat-messages mb-3 bg-dark rounded p-3 overflow-auto" id="chat-box">
 				<div class="alert alert-warning alert-dismissible fade show" role="alert">
