--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="d-flex flex-wrap justify-content-center">
 			<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-				<img style="height:32px; width:atuo;" alt="AI Robot on Computer" src="/assets/svg/ai-6e9dd4.svg">
+				<img style="height:32px; width:atuo;" alt="AI Robot on Computer" src="/assets/svg/ai-82ab00.svg">
 				<span class="fs-4">Yohns AI Chat</span>
 			</a>
 			<ul class="nav">
