--- a/views/partials/settings.ejs
+++ b/views/partials/settings.ejs
@@ -36,7 +36,7 @@
 						</select>
 					</div>
 					<div class="floating-label">
-						<textarea id="systemPrompt" name="systemPrompt" class="form-control" placeholder="System Prompt.."></textarea>
+						<textarea id="systemPrompt" name="systemPrompt" class="form-control auto-grow" placeholder="System Prompt.."></textarea>
 						<label for="systemPrompt">System Prompt..</label>
 					</div>
 					<div>...<br>...<br>Put what I have in the to-do-list here.<br>...<br>...<br>Click the other button in the navbar...<br>...<br>...</div>
